<resources>
    <string name="app_name">Vintai</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="lbl_best_posts">Best Post</string>
    <string name="lbl_general_statics">Estadísticas generales</string>
    <string name="lbl_my_styles">Mis estilos</string>
    <string name="lbl_best_profiles">Best Profiles</string>
    <string name="lbl_user_profile">Welcome John Doe</string>
    <string name="lbl_principal">Principal</string>
    <string name="lbl_take_picture">Tomar foto</string>
    <string name="lbl_api_data">Datos desde API</string>
    <string name="lbl_graphic">Gráfica</string>
    <string name="lbl_edit_picture">Editar Foto</string>
    <string name="lbl_edit_ai">Editor AI</string>
    <string name="lbl_nav_menu">1.-Menu de navegacion</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</string>
    <string name="lbl_comments">Comentarios</string>

    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
</resources>
