<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/lbl_principal" />
        <item
            android:id="@+id/catalog"
            android:title="@string/lbl_take_picture" />
        <item
            android:id="@+id/my_gifts"
            android:title="@string/lbl_api_data" />
        <item
            android:id="@+id/ranking"
            android:title="@string/lbl_graphic" />

        <item
            android:id="@+id/edit_picture"
            android:title="@string/lbl_edit_picture" />

        <item
            android:id="@+id/edit_ai"
            android:title="@string/lbl_edit_ai" />
    </group>
</menu>